[metadata]
name = deeperwin
version = 1.0.0
author = Michael Scherbela, Leon Gerard, Rafael Reisenhofer
author_email = deeperwin.datascience@univie.ac.at
description = A JAX based framework to calculate deep-learning VMC solutions to the Schrödinger equation
long_description = file: README.md
long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

setup_requires =
    setuptools >=30.3.0
    wheel

install_requires =
    jax
    jaxlib
    pyscf
    h5py==3.2.1
    ruamel.yaml
    pydantic
    matplotlib
    pandas
    parse
    networkx
    ordered_set
    wandb

[options.packages.find]
where = src
include = deeperwin*

[options.extras_require]
full = sphinx; sphinx-rtd-theme; pytest

[options.entry_points]
console_scripts =
    deeperwin = deeperwin.main:main