[metadata]
name = deeperwin
version = 1.2.0
author = Michael Scherbela, Leon Gerard, Rafael Reisenhofer
author_email = deeperwin.datascience@univie.ac.at
description = A JAX based framework to calculate deep-learning VMC solutions to the Schrödinger equation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

setup_requires =
    setuptools >=30.3.0
    wheel

install_requires =
    jax
    jaxlib
    dm-haiku
    optax
    chex
    pyscf
    h5py==3.2.1
    ruamel.yaml
    pydantic
    wandb
    kfac-jax @ git+https://github.com/MScherbela/kfac-jax.git@bed6dd9fe0f321b3dd0da39ab9aff675abed8a7b

[options.packages.find]
where = src
include = deeperwin*

[options.extras_require]
full = sphinx; sphinx-rtd-theme; pytest; pandas; matplotlib

[options.entry_points]
console_scripts =
    deeperwin = deeperwin.cli:main
    dpe_sweep_agent = deeperwin.sweep_agent:run_sweep_agent